--- a/preamble.tex
+++ b/preamble.tex
@@ -210,7 +210,7 @@ vlined]{algorithm2e}
 \newcommand{\pedro}[2][]{\todo[linecolor=nicegreen,backgroundcolor=nicegreen!70!,caption={}, #1]{#2}}
 
 %editing
-\renewcommand{\!}[1]{{\color{red}\text{$\star$\,}#1\,$\star$}}
+%\renewcommand{\!}[1]{{\color{red}\text{$\star$\,}#1\,$\star$}}
 \newcommand{\ol}[1]{\overline{#1}}
 
 % Decent looking bars (by Hendrik Vogt)
